Revise configuration of JavaCompile tasks